feat(quasar): wip CRUD functionality for Quasar application
